...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/main_activity_page">


    <TextView
        android:id="@+id/checkin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="142dp"
        android:layout_marginBottom="161dp"
        android:text="Administrator" />

    <Button
        android:id="@+id/attendeebtn"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="37dp"
        android:layout_marginBottom="60dp"
...
