<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home2"
        android:icon="@drawable/img_1"
        android:title="Home" />

    <item
        android:id="@+id/qrcodes2"
        android:title="Scan QR Code"
        android:icon="@drawable/img_2"/>

    <item
        android:id="@+id/messages2"
        android:title="Messages"
        android:icon="@drawable/img_3"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/img_5"
        android:title="Profile" />


</menu>