<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/backbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back"
            android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Profile"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginBottom="3dp"/>

    <!-- Image -->
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:visibility="visible" />

    </androidx.cardview.widget.CardView>

    <!-- Editable TextBox - Name -->

    <Button
        android:id="@+id/editPictureButton"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:onClick="onUploadImageButtonClick"
        android:text="Edit Picture" />

    <Button
        android:id="@+id/removePictureButton"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="onRemovePictureButtonClick"
        android:text="Remove Picture"
        android:visibility="gone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="  Your Name"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="10dp"/>

    <!-- Editable TextBox - Email -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="  Your email"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="10dp"/>

    <!-- Editable TextBox - Homepage -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Homepage"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/homeEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="  Your Homepage URL"
        android:inputType="textUri"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="10dp"/>
    <!-- Editable TextBox -  Phone -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Phone"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"/>

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="  Your Phone Number"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="10dp"
        android:inputType="phone" />

    <!-- CheckBox -->

    <CheckBox
        android:id="@+id/locationBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:text="Geolocation Tracking Permission"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:onClick="onSaveButtonClick"
        android:text="Save" />



    <!-- Will add more UI elements as needed -->

    </LinearLayout>
</ScrollView>
